// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide description when button is clicked 1`] = `
<DocumentFragment>
  <button
    data-testid="hidden-button"
  >
    hidden
  </button>
</DocumentFragment>
`;

exports[`should render component 1`] = `
<DocumentFragment>
  <div
    data-testid="description-text"
  >
    <span>
      Hi, i am Test component
    </span>
  </div>
  <button
    data-testid="hidden-button"
  >
    hidden
  </button>
</DocumentFragment>
`;
